<resources>
    <string name="app_name">To-Do-Bot</string>
    <string name="action_settings">Settings</string>
    <string name="add_button_description">Add Button</string>
    <string name="delete_button_description">Delete Button</string>
    <string name="add_task_failed">Adding your task failed!</string>
    <string name="update_task_success">Task updated!</string>
    <string name="add_datetime">Add date and time!</string>
    <string name="emptyTasksList">No tasks</string>

    <string name="add_task">Add Task</string>
    <string name="delete_task">Delete Task</string>

    <string name="taskDetails">Task Details</string>
    <string name="taskPriority">Task Priority</string>

    <string name="hintTaskName">Task Name</string>
    <string name="hintTaskDescription">Task Description</string>

    <string name="taskHighPriority">High</string>
    <string name="taskLowPriority">Medium</string>
    <string name="taskNonePriority">None</string>

    <string name="saveTask">Save</string>
    <string name="cancelTask">Cancel</string>
    <string name="taskCategory">Category</string>
    <string name="categoryPrompt">Choose a category</string>
    <string name="taskAlarm">Set alarm</string>
    <string name="no_alarm_set">No alarm set</string>
    <string name="yourTime">Click to set a time</string>
    <string name="yourDate">Click to set a date</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="error_field_empty">This field cannot be blank</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_your_picture">Pick your picture</string>
    <string name="task_description">Task Description</string>
    <string name="add_category">Add Category</string>
    <string name="no_tasks">No tasks</string>
    <string name="remove_picture">Remove picture</string>
    <string name="edit">Edit</string>
    <string name="category_name">Category Name</string>
    <string name="your_category_name">Your category name</string>
    <string name="category_description">Category description</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_new_category">Add New Category</string>
    <string name="your_categories_title">Your Categories</string>
    <string-array name="taskCategories">
        <item>None</item>
        <item>Business</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Others</item>
    </string-array>
</resources>

