<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="uofm.software_engineering.group7.to_do_bot.AddTaskActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/taskDetails"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/taskDetails"
                android:textSize="20sp"
                android:textColor="#FF007F"/>

            <EditText
                android:id="@+id/taskName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/hintTaskName"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/taskDescription"
                android:layout_width="fill_parent"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:hint="@string/hintTaskDescription"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:lines="4"
                android:maxLines="4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/taskPriority"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:text="@string/taskPriority"
                android:textSize="20sp"
                android:textColor="#FF007F"/>

            <RadioGroup
                android:id="@+id/radioTaskPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioTaskHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/taskHighPriority" />

                <RadioButton
                    android:id="@+id/radioTaskLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/taskLowPriority" />

                <RadioButton
                    android:id="@+id/radioTaskNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/taskNonePriority" />

            </RadioGroup>

            <TextView
                android:id="@+id/taskAlarm"
                android:layout_width="184dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:text="@string/taskAlarm"
                android:textSize="20sp"
                android:textColor="#FF007F"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

                <TextView
                    android:id="@+id/textYourDate"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:text="@string/yourTime"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textYourTime"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:text="Your Time"
                    android:layout_gravity="center_horizontal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                android:id="@+id/button_pick_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="pickDate"
                android:text="@string/pick_a_date"
                android:textColor="#FF007F" />

            <Button
                android:id="@+id/button_pick_time"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:onClick="pickTime"
                android:text="@string/pick_a_time"
                android:textColor="#FF007F"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/button_Remove_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="removeAlarm"
                android:text="Remove Alarm"
                android:textColor="#FF007F"
                android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelTask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="cancel"
                    android:paddingRight="15dp"
                    android:text="@string/cancelTask" />

                <Button
                    android:id="@+id/saveTask"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="save"
                    android:paddingLeft="15dp"
                    android:text="@string/saveTask" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>